--- a/vue3/package.json
+++ b/vue3/package.json
@@ -12,6 +12,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@vue/reactivity": "^3.2.19"
+    "@vue/reactivity": "^3.2.19",
+    "vue": "^3.2.20"
   }
 }
