--- a/node/package.json
+++ b/node/package.json
@@ -4,6 +4,9 @@
     "commander": "^8.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-media-server": "^2.3.9",
+    "node-rtsp-stream": "^0.0.9",
+    "os": "^0.1.2"
   }
 }
